--- a/FilmFusión.ipynb
+++ b/FilmFusión.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "### FilmFusión es un sistema de recomendación de películas basado en inteligencia artificial que ayuda a los usuarios a encontrar la película ideal según sus gustos y preferencias. Utilizando técnicas de aprendizaje automático y análisis de datos, FilmFusión ofrece recomendaciones personalizadas al analizar información sobre películas, como géneros, actores, valoraciones y descripciones. El sistema puede ser implementado utilizando bibliotecas populares de Python como Pandas, NumPy y Scikit-learn, permitiendo a los usuarios descubrir nuevas películas que se alineen con sus intereses. Con FilmFusión, la búsqueda de la próxima gran película se convierte en una experiencia intuitiva y emocionante.\n",
         "\n",
-        "* *Para este proyecto estaremos utilizando una data ya existente que la sacamos de https://grouplens.org/datasets/movielens/, son calificaciones de películas de MovieLens 100K . Conjunto de datos de referencia estable. 100 000 calificaciones de 1000 usuarios sobre 1700 películas. Publicado en abril de 1998.*"
+        "* Para este proyecto estaremos utilizando una data ya existente que la sacamos de https://grouplens.org/datasets/movielens/, son calificaciones de películas de MovieLens 100K . Conjunto de datos de referencia estable. 100 000 calificaciones de 1000 usuarios sobre 1700 películas. Publicado en abril de 1998."
       ],
       "metadata": {
         "id": "gTfh7OblfImh"
