--- a/FilmFusión.ipynb
+++ b/FilmFusión.ipynb
@@ -20,9 +20,9 @@
       "source": [
         "# ***FilmFusión: Sistema de Recomendación de Películas***\n",
         "\n",
-        "### FilmFusión es un sistema de recomendación de películas basado en inteligencia artificial que ayuda a los usuarios a encontrar la película ideal según sus gustos y preferencias. Utilizando técnicas de aprendizaje automático y análisis de datos, FilmFusión ofrece recomendaciones personalizadas al analizar información sobre películas, como géneros, actores, valoraciones y descripciones. El sistema puede ser implementado utilizando bibliotecas populares de Python como Pandas, NumPy y Scikit-learn, permitiendo a los usuarios descubrir nuevas películas que se alineen con sus intereses. Con FilmFusión, la búsqueda de la próxima gran película se convierte en una experiencia intuitiva y emocionante.\n",
+        "#### FilmFusión es un sistema de recomendación de películas basado en inteligencia artificial que ayuda a los usuarios a encontrar la película ideal según sus gustos y preferencias. Utilizando técnicas de aprendizaje automático y análisis de datos, FilmFusión ofrece recomendaciones personalizadas al analizar información sobre películas, como géneros, actores, valoraciones y descripciones. El sistema puede ser implementado utilizando bibliotecas populares de Python como Pandas, NumPy y Scikit-learn, permitiendo a los usuarios descubrir nuevas películas que se alineen con sus intereses. Con FilmFusión, la búsqueda de la próxima gran película se convierte en una experiencia intuitiva y emocionante.\n",
         "\n",
-        "* Para este proyecto estaremos utilizando una data ya existente que la sacamos de https://grouplens.org/datasets/movielens/, son calificaciones de películas de MovieLens 100K . Conjunto de datos de referencia estable. 100 000 calificaciones de 1000 usuarios sobre 1700 películas. Publicado en abril de 1998."
+        "#### * Para este proyecto estaremos utilizando una data ya existente que la sacamos de https://grouplens.org/datasets/movielens/, son calificaciones de películas de MovieLens 100K . Conjunto de datos de referencia estable. 100 000 calificaciones de 1000 usuarios sobre 1700 películas. Publicado en abril de 1998."
       ],
       "metadata": {
         "id": "gTfh7OblfImh"
@@ -350,7 +350,7 @@
       "source": [
         "# **4.  Crear una matriz de calificaciones:**\n",
         "\n",
-        "##### Crear una matriz donde las filas son usuarios y las columnas son películas. Esto facilitará el cálculo de similitudes."
+        "### Crear una matriz donde las filas son usuarios y las columnas son películas. Esto facilitará el cálculo de similitudes."
       ],
       "metadata": {
         "id": "A3jfjLiQvzCU"
@@ -370,7 +370,7 @@
       "source": [
         "# **5. Dividir el conjunto de datos:**\n",
         "\n",
-        "##### Dividimos los datos en conjuntos de entrenamiento y prueba para evaluar el sistema de recomendación"
+        "### Dividimos los datos en conjuntos de entrenamiento y prueba para evaluar el sistema de recomendación"
       ],
       "metadata": {
         "id": "HaNVqtLXwhqp"
@@ -390,7 +390,7 @@
       "source": [
         "# **6. Calcular la similitud entre usuarios:**\n",
         "\n",
-        "##### Usamos la similitud del coseno para calcular qué tan similares son los usuarios en base a sus calificaciones."
+        "### Usamos la similitud del coseno para calcular qué tan similares son los usuarios en base a sus calificaciones."
       ],
       "metadata": {
         "id": "umStD2J1wsRY"
@@ -410,7 +410,7 @@
       "source": [
         "# **7.  Función para hacer recomendaciones:**\n",
         "\n",
-        "##### Definimos una función que toma un ID de usuario y devuelve recomendaciones basadas en usuarios similares."
+        "### Definimos una función que toma un ID de usuario y devuelve recomendaciones basadas en usuarios similares."
       ],
       "metadata": {
         "id": "srHIzJKzw4qY"
@@ -430,7 +430,7 @@
       "source": [
         "# **8. Probar el sistema de recomendación:**\n",
         "\n",
-        "##### Probamos la función con un usuario específico y mostramos las películas recomendadas."
+        "### Probamos la función con un usuario específico y mostramos las películas recomendadas."
       ],
       "metadata": {
         "id": "DfQwDVoSxFHf"
